<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:id="@+id/title"
        android:text="@string/options_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/options_music_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_music"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:id="@+id/options_music_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>

        <TextView
            android:id="@+id/options_sfx_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_sfx"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:id="@+id/options_sfx_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>

        <TextView
            android:id="@+id/options_themes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_themes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:id="@+id/options_themes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:contentDescription="@string/options_themes_desc" />

        <Button
           android:id="@+id/options_reset_button"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_reset"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/options_records_button"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_records"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/options_back_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:text="@string/options_back"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/footerbarlayout"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/footerbarlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/footerbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/footer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>