<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <GridLayout
        android:id="@+id/play_buttongrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/play_topleft"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/topleft"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_top"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/top"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_topright"
            android:layout_row="0"
            android:layout_column="2"
            android:contentDescription="@string/topright"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_centerleft"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/centerleft"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_center"
            android:layout_row="1"
            android:layout_column="1"
            android:contentDescription="@string/center"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_centerright"
            android:layout_row="1"
            android:layout_column="2"
            android:contentDescription="@string/centerright"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_bottomleft"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@string/bottomleft"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_bottom"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/bottom"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            android:id="@+id/play_bottomright"
            android:layout_row="2"
            android:layout_column="2"
            android:contentDescription="@string/bottomright"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

    </GridLayout>

    <TableLayout
        android:id="@+id/moveLevelRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footerbarlayout"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/play_move_count"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/play_level_count"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/play_record"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/play_return_button"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_return"/>

        </TableRow>

    </TableLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/footerbarlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/footerbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/footer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>